updated ceville fix

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "boxtron",
+        "ceville",
         "Ceville",
         "dosbox",
         "linux",
@@ -8,10 +9,12 @@
         "Lutris",
         "luxtorpeda",
         "neovim",
+        "Protondb",
         "scummvm",
         "Syberia",
         "ubisoft",
         "Ubisoft",
+        "WINEPREFIX",
         "winetricks",
         "Wolfenstein"
     ]
